# vr-software-teste

./: Makefile  README.md  pyproject.toml
src/: main.py
src/entities/: __init__.py  notification.py
src/enums/: __init__.py  environment_enum.py  notification_status_enum.py  notification_type_enum.py
src/exceptions/: __init__.py  notification_not_found.py  notification_not_found_error.py
src/repositories/: __init__.py  notification_repository.py  notification_repository_in_memory.py
src/routers/: __init__.py  notification_router.py
src/schemas/: __init__.py  create_notification_input.py  create_notification_output.py  notification_output.py
src/services/: __init__.py  notification_service.py  notification_service_rabbitmq.py
src/settings/broker/: broker_settings.py
src/use_cases/: __init__.py  create_notification_use_case.py  find_notification_use_case.py  injection.py
tests/: conftest.py
tests/services/: test_consumer.py  test_consumer_cloudamqp.py
tests/use_cases/: test_create_notification_usecase.py  test_find_notification_usecase.py
