[project]
name = "vr-software-teste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.7",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["B008", "COM812", "D", "FBT001", "INP001", "TC001", "TC002", "TC003", "TC006",]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401",]
"tests/**" =  ["S"]

[tool.ruff.lint.pylint]
max-args = 10
